--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "1.2.12",
@@ -58,6 +59,9 @@
   },
   "devDependencies": {
     "@eslint/js": "9.37.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "22.18.10",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.1",
@@ -71,6 +75,8 @@
     "tailwindcss": "3.4.18",
     "typescript": "5.7.3",
     "typescript-eslint": "8.46.0",
-    "vite": "6.3.6"
+    "vite": "6.3.6",
+    "vitest": "2.1.8",
+    "jsdom": "25.0.1"
   }
 }
