--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "1.1.15",
@@ -31,19 +34,25 @@
   },
   "devDependencies": {
     "@eslint/js": "9.37.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "22.18.10",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.1",
     "@vitejs/plugin-react": "4.7.0",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "10.4.21",
     "eslint": "9.37.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.23",
     "globals": "15.15.0",
+    "jsdom": "^27.0.1",
     "postcss": "8.5.6",
     "tailwindcss": "3.4.18",
     "typescript": "5.7.3",
     "typescript-eslint": "8.46.0",
-    "vite": "6.3.6"
+    "vite": "6.3.6",
+    "vitest": "^3.2.4"
   }
 }
