--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.37.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "14.6.1",
@@ -45,13 +46,13 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.23",
     "globals": "15.15.0",
-    "jsdom": "^27.0.1",
+    "jsdom": "25.0.1",
+    "msw": "^2.11.6",
     "postcss": "8.5.6",
     "tailwindcss": "3.4.18",
     "typescript": "5.7.3",
     "typescript-eslint": "8.46.0",
     "vite": "6.3.6",
-    "vitest": "2.1.8",
-    "jsdom": "25.0.1"
+    "vitest": "2.1.8"
   }
 }
