--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "typescript": "5.7.3",
     "typescript-eslint": "8.46.0",
     "vite": "6.3.6",
-    "vitest": "2.1.8"
+    "vitest": "^3.2.4"
   }
 }
