--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
 
 jobs:
-  build:
+  frontend:
+    name: Frontend Build & Test
     runs-on: ubuntu-latest
 
     steps:
@@ -20,14 +21,45 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install dependencies
+      - name: Install frontend dependencies
         run: npm ci
 
-      - name: Run lint
+      - name: Run frontend lint
         run: npm run lint
 
-      - name: Build application
+      - name: Build frontend application
         run: npm run build
 
-      - name: Run tests (if present)
-        run: npm run test --if-present
+      - name: Run frontend tests
+        run: npm run test
+
+  backend:
+    name: Backend Build & Test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: server/package-lock.json
+
+      - name: Install backend dependencies
+        working-directory: ./server
+        run: npm ci
+
+      - name: Run backend lint
+        working-directory: ./server
+        run: npm run lint
+
+      - name: Set up database for tests
+        working-directory: ./server
+        run: npm run db:migrate
+
+      - name: Run backend tests
+        working-directory: ./server
+        run: npm run test
