feat: add concurrent server startup and update documentation
- Add concurrently package to run frontend and backend together
- Update npm run dev to start both servers concurrently
  - Frontend on http://localhost:5173 (cyan prefix)
  - Backend on http://localhost:3000 (magenta prefix)
- Add dev:frontend and dev:backend scripts for individual server startup

- Update README.md with comprehensive setup instructions
  - Document backend setup and database migration steps
  - Explain both Backend API and LocalStorage persistence modes
  - Add detailed script documentation for root and backend projects
  - Clarify quick start process for new developers

This makes it easier for developers to get the full stack running
with a single command instead of managing two separate terminal windows.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" --names \"frontend,backend\" --prefix-colors \"cyan,magenta\"",
+    "dev:frontend": "vite",
+    "dev:backend": "cd server && npm run dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -43,6 +45,7 @@
     "@vitejs/plugin-react": "4.7.0",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "9.37.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.23",
